# TwoLocusGPR

./: Fit_MSD.py  GPR.py  Posterior_analysis.py  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
.github/workflows/: ci.yml
TwoLocusGPR/: Fit_MSD.py  GPR.py  MSD_functions.py  Posterior_analysis.py  __init__.py
TwoLocusGPR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: Anomaly_detection.ipynb  Posterior_predictions.ipynb  fit_MSD.ipynb
examples/Data/: noisy_track.npy  true_track.npy
tests/: test_GPR.py  test_MSDfit.py  test_utils_and_posterior.py
