[metadata]
name = TwoLocusGPR
version = 0.1.0
description = Two-locus Gaussian Process Regression utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Unknown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    jax>=0.4.28
    jaxlib>=0.4.28
    numpy>=1.26
    scipy>=1.11
    tqdm>=4.66
    matplotlib>=3.8
python_requires = >=3.9

[options.packages.find]
include = TwoLocusGPR*

[options.extras_require]
test =
    pytest>=7.4
